--- a/views/registration.jade
+++ b/views/registration.jade
@@ -3,9 +3,11 @@ extends layout
 block content
   h1= title
   form(method="post" action="create")
-    label(for="comment") Got something to say:
-    input(type="text", name="comment", value=comment)
+    label(for="name") Full Name:
+    input(type="text", name="name", value=name)
+    label(for="email") Email address:
+    input(type="text", name="email", value=email)
     input(type="submit", value="Save")
   br
-  - for comment in comments
-    p= comment.title
+  - for user in users
+    p= user.name
