added DOB and weight fields

--- a/views/registration.jade
+++ b/views/registration.jade
@@ -20,6 +20,24 @@ block content
       value=email
     )
 
+    label(for="dob") Date of Birth:
+    input(
+      type="date"
+      id="dob"
+      name="dob"
+      class="form-control"
+      value=dob
+    )
+
+    label(for="weight") Weight(KG):
+    input(
+      type="number"
+      id="weight"
+      name="weight"
+      class="form-control"
+      value=weight
+    )    
+
     input(
       type="submit"
       value="Submit"
