navbar links updated

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,6 +21,12 @@ html
         div.collapse.navbar-collapse(id='bs-example-navbar-collapse-1')
           ul.nav.navbar-nav
             li
-              a(href='#') Link
-
+              a(href='/registration') Register User
+            li
+              a(href='/users') Manage Users
+            li
+              a(href='/product') Add Products
+            li
+              a(href='/productlist') Manage Products
+              
     block content
