--- a/views/users.jade
+++ b/views/users.jade
@@ -15,7 +15,7 @@ block content
       - each user in users
         tr
           td
-            input(id = user.weight, type="radio", name="RadioGroup")
+            input(id = user._id, type="radio", name="RadioGroup")
           td= user.name
           td= user.email
           td= user.dob
