Can now delete users from DB!!!

--- a/views/users.jade
+++ b/views/users.jade
@@ -4,19 +4,21 @@ block content
   h1= title
   br
 
-  table(class="table")
-    thead
-      tr
-        th Name
-        th Email
-        th DoB
-        th Weight (KG)
-    tbody
-      - each user in users
+  form(action='/delete', method='post')
+    table(class="table")
+      thead
         tr
-          td
-            input(id = user._id, type="radio", name="RadioGroup")
-          td= user.name
-          td= user.email
-          td= user.dob
-          td= user.weight
+          th Name
+          th Email
+          th DoB
+          th Weight (KG)
+      tbody
+        - each user in users
+          tr
+            td
+              input(id = user._id, type="radio", name="userlist", value=user._id)
+              td= user.name
+              td= user.email
+              td= user.dob
+              td= user.weight
+      button(type='submit') Delete User
