added delete capability to product list and also added additional fields - calories, protein etc

--- a/views/users.jade
+++ b/views/users.jade
@@ -8,6 +8,7 @@ block content
     table(class="table")
       thead
         tr
+          th Select
           th Name
           th Email
           th DoB
