--- a/views/product.jade
+++ b/views/product.jade
@@ -3,7 +3,7 @@ extends layout
 block content
   h1= title
   br
-  
+
   form(action="/product" method="POST" class="form-registration")
     label(for="product_type") Product Type:
     input(
@@ -39,6 +39,105 @@ block content
       name="mass"
       class="form-control"
       value=mass
+    )
+
+    label(for="calories") Calories:
+    input(
+      type="number"
+      id="calories"
+      name="calories"
+      class="form-control"
+      value=calories
+    )
+
+    label(for="carbs") Carbs:
+    input(
+      type="number"
+      id="carbs"
+      name="carbs"
+      class="form-control"
+      value=carbs
+    )
+
+    label(for="protein") Protein:
+    input(
+      type="number"
+      id="protein"
+      name="protein"
+      class="form-control"
+      value=protein
+    )
+
+    label(for="fat") Fat:
+    input(
+      type="number"
+      id="fat"
+      name="fat"
+      class="form-control"
+      value=fat
+    )
+
+    label(for="sodium") Sodium:
+    input(
+      type="number"
+      id="sodium"
+      name="sodium"
+      class="form-control"
+      value=sodium
+    )
+
+    label(for="chloride") Chloride:
+    input(
+      type="number"
+      id="chloride"
+      name="chloride"
+      class="form-control"
+      value=chloride
+    )
+
+    label(for="potassium") Potassium:
+    input(
+      type="number"
+      id="potassium"
+      name="potassium"
+      class="form-control"
+      value=potassium
+    )
+
+    label(for="calcium") Calcium:
+    input(
+      type="number"
+      id="calcium"
+      name="calcium"
+      class="form-control"
+      value=calcium
+    )
+
+    label(for="caffeine") Caffeine:
+    input(
+      type="number"
+      id="caffeine"
+      name="caffeine"
+      class="form-control"
+      value=caffeine
+    )
+
+    label(for="vendor") Vendor:
+    input(
+      type="text"
+      id="vendor"
+      name="vendor"
+      class="form-control"
+      value=vendor
+    )
+
+    label(for="notes") Notes:
+    input(
+      type="text"
+      id="notes"
+      name="notes"
+      class="form-control"
+      value=notes
     )
 
     input(
