Initial working app to heroku

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,7 +17,7 @@ html
             span.icon-bar
             span.icon-bar
             span.icon-bar
-        a.navbar-brand(href='#') Endurance Nutrition
+        a.navbar-brand(href='/') Endurance Nutrition
         div.collapse.navbar-collapse(id='bs-example-navbar-collapse-1')
           ul.nav.navbar-nav
             li
@@ -28,5 +28,6 @@ html
               a(href='/product') Add Products
             li
               a(href='/productlist') Manage Products
-              
+
+
     block content
