--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,6 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+
+    h1 Endurance Nutrition
+    p Some motivational bullshit here
