Initial recommendations engine working!

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -28,6 +28,8 @@ html
               a(href='/product') Add Products
             li
               a(href='/productlist') Manage Products
+            li
+              a(href='/manualrace') Enter a Race
 
 
     block content
