--- a/views/manualrace.jade
+++ b/views/manualrace.jade
@@ -23,6 +23,14 @@ block content
       value=time
     )
 
+    label(for="weight") Weight (KG):
+    input(
+      type="number"
+      id="weight"
+      name="weight"
+      class="form-control"
+      value=weight
+    )
     input(
       type="submit"
       value="Submit"
