--- a/views/recommendations.jade
+++ b/views/recommendations.jade
@@ -3,4 +3,5 @@ extends layout
 block content
 
     h1 Recommendations
-    p You will need #{calories} calories
+    p You will be running at an average pace of: #{pace} mins/mile
+    p You will use around #{totalCalories} calories
