--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,6 +21,8 @@ html
         div.collapse.navbar-collapse(id='bs-example-navbar-collapse-1')
           ul.nav.navbar-nav
             li
+              a(href='/myprofile') My Profile
+            li
               a(href='/registration') Register User
             li
               a(href='/users') Manage Users
